--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,6 @@ body {
 
     .logo {
         height: 9vh;
-        margin-right: 30px;
     }
 
     .box-nav-btn {
@@ -73,13 +72,15 @@ body {
         border: none;
         border-radius: 7px;
         margin-right: 15px;
+        cursor: pointer;
     }
 
     .btn-cadastro:active {
         transform: scale(0.95);
     }
 
-    .btn-login {
+    .btn-login,
+    .btn-login a {
         width: 100px;
         height: 40px;
         font-family: "Raleway", sans-serif;
@@ -88,6 +89,12 @@ body {
         background: none;
         border: 1px solid #f5f5f5;
         border-radius: 7px;
+    }
+
+    .btn-login a {
+        border: none;
+        padding: 12px 30px;
+        text-decoration: none;
     }
 
     .btn-login:active {
@@ -252,10 +259,10 @@ body {
     }
 
     #video {
-        height: 350px;
-        width: 100%;
+        border-radius: 7px;
+        box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     }
-
+    
     .lineIn1,
     .lineIn2 {
         height: 3px;
@@ -410,7 +417,7 @@ body {
 
     .box-form > input,
     .box-form > textarea,
-    .box-feedback > input{
+    .box-feedback > input {
         height: 30px;
         width: 200px;
         background: rgba(30, 30, 30, 0.5);
@@ -452,6 +459,7 @@ body {
         height: 30px;
         border-radius: 3px;
         border: none;
+        cursor: pointer;
     }
 
     .btn-contato:active {
@@ -507,8 +515,8 @@ body {
         border: none;
         border-radius: 0 3px 3px 0;
         font-family: "Rubik", sans-serif;
+        cursor: pointer;
     }
-
 
     /* FOOTER */
 
