--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,10 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: #f5f5f5;
+}
+
+@keyframes scrollAnimation {
+    0% {
+        transform: translateY(0);
+
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 @media screen and (min-width: 320px) {
@@ -60,9 +74,10 @@ body {
         height: 40px;
         background-color: #f5f5f5;
         color: #9b0000;
+        transition: 1s;
     }
 
-    .btn-cadastro {
+    .btn-cadastro{
         width: 110px;
         height: 40px;
         font-family: "Raleway", sans-serif;
@@ -75,8 +90,20 @@ body {
         cursor: pointer;
     }
 
+    .btn-cadastro a {
+        padding: 12px 12px;
+        color: #9b0000;
+        text-decoration: none;
+    }
+
+    .btn-cadastro:hover {
+        background-color: #dadada;
+        transition: 0.3s;
+    }
+
     .btn-cadastro:active {
         transform: scale(0.95);
+        transition: 0.3s;
     }
 
     .btn-login,
@@ -97,8 +124,14 @@ body {
         text-decoration: none;
     }
 
+    .btn-login:hover {
+        background-color: rgba(245, 245, 245, 0.3);
+        transition: 0.3s;
+    }
+
     .btn-login:active {
         transform: scale(0.95);
+        transition: 0.3s;
     }
 
     .banner {
@@ -145,18 +178,20 @@ body {
         cursor: pointer;
     }
 
+    .btn-banner:hover {
+        background-color: #dadada;
+        transition: 0.3s;
+    }
+
     .btn-banner:active {
         transform: scale(0.95);
     }
 
-    .btn-banner:hover {
-        transition: 0.5s;
-    }
-
     .scroll-Down {
         display: flex;
-        margin-top: 60px;
+        margin-top: 100px;
         align-items: center;
+        animation: scrollAnimation 3s infinite ease-in-out;
     }
 
     .scroll-Down > p {
@@ -262,7 +297,7 @@ body {
         border-radius: 7px;
         box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     }
-    
+
     .lineIn1,
     .lineIn2 {
         height: 3px;
@@ -430,11 +465,6 @@ body {
         outline: none;
     }
 
-    .box-form > input:hover,
-    .box-form > textarea:hover {
-        border: 2px solid #9b0000;
-    }
-
     .box-form > textarea,
     .box-form > textarea::placeholder {
         height: 100px;
@@ -462,8 +492,14 @@ body {
         cursor: pointer;
     }
 
+    .btn-contato:hover {
+        background-color: #8a0000;
+        transition: 0.3s;
+    }
+
     .btn-contato:active {
         transform: scale(0.95);
+        transition: 0.3s;
     }
 
     .box-detalhe p:first-child {
@@ -501,9 +537,6 @@ body {
     .box-feedback > input {
         border-radius: 3px 0 0 3px;
     }
-    .box-feedback > input:hover {
-        border: 2px solid #9b0000;
-    }
 
     .box-feedback > input::placeholder {
         color: #e9eaec;
@@ -516,6 +549,11 @@ body {
         border-radius: 0 3px 3px 0;
         font-family: "Rubik", sans-serif;
         cursor: pointer;
+    }
+
+    .btn-feed:hover {
+        background-color: #8a0000;
+        transition: 0.3s;
     }
 
     /* FOOTER */
@@ -592,7 +630,7 @@ body {
     }
 
     .seguir img:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
     }
 }
 @media screen and (min-width: 576px) {
