--- a/src/assets/css/cadastroStyle.css
+++ b/src/assets/css/cadastroStyle.css
@@ -53,6 +53,11 @@
     padding: 0 15px 0 15px;
 }
 
+.nav-container a:hover {
+    color: #9b0000;
+    transition: 0.3s;
+}
+
 .nav-container a:nth-child(3) {
     display: flex;
     align-items: center;
