--- a/src/assets/css/loginStyle.css
+++ b/src/assets/css/loginStyle.css
@@ -35,6 +35,11 @@
     padding: 0 15px 0 15px;
 }
 
+.nav-container a:hover {
+    color: #9b0000;
+    transition: 0.3s;   
+}
+
 .nav-container a:nth-child(2) {
     display: flex;
     align-items: center;
