--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -79,6 +79,26 @@ body {
         left: 0;
         background-color: rgba(155, 0, 0, 0.6);
     }
+    
+    /* PERFIL */
+    .perfil-container {
+        display: none;
+    }
+
+    .perfil-container {
+        cursor: pointer;
+    }
+
+    .perfil-container:active{
+        transform: scale(0.95);
+    }
+
+    .perfil-container-mob {
+        position: relative;
+        top: -320px;
+        display: block;
+        cursor: pointer;
+    }
 
     /* HEADER */
     header > .container-fluid {
@@ -329,11 +349,16 @@ body {
         font-weight: 600;
         font-size: 15px;
         background-color: #f5f5f5;
-        color: #9b0000;
         border: none;
         border-radius: 7px;
         margin-top: 40px;
         cursor: pointer;
+    }
+
+    .btn-banner a{
+        padding: 10px 40px 10px 40px;
+        color: #9b0000;
+        text-decoration: none;
     }
 
     .btn-banner:hover {
@@ -1011,6 +1036,15 @@ body {
     /* AVALIACAO */
     .avaliacao {
         display: block;
+    }
+
+    /* PERFIL */
+    .perfil-container {
+        display: block;
+    }
+
+    .perfil-container-mob {
+        display: none;
     }
 }
 @media screen and (min-width: 1200px) {
