--- a/src/assets/css/cadastroStyle.css
+++ b/src/assets/css/cadastroStyle.css
@@ -14,6 +14,7 @@
     background-repeat: no-repeat;
     height: 100vh;
     width: 40%;
+    display: none;
 }
 
 .bg-cadastro h5 {
@@ -44,7 +45,24 @@
     margin-left: 20px;
 }
 
-.nav-container a {
+.btn-voltar-mob {
+    position: absolute;
+    top: 40px;
+    left: 25px;
+}
+
+.btn-voltar-mob a {
+    background-color: #9b0000;
+    color: #f5f5f5;
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 7px;
+    padding: 10px 20px;
+}
+
+.nav-container a,
+.nav-container-mob a {
     font-family: "Raleway", sans-serif;
     font-size: 16px;
     text-decoration: none;
@@ -53,12 +71,13 @@
     padding: 0 15px 0 15px;
 }
 
-.nav-container a:hover {
-    color: #9b0000;
+.nav-container a:hover,
+.nav-container-mob a:hover {
     transition: 0.3s;
 }
 
-.nav-container a:nth-child(3) {
+.nav-container a:nth-child(3),
+.nav-container-mob a:nth-child(3) {
     display: flex;
     align-items: center;
     border-radius: 7px;
@@ -75,18 +94,20 @@
 /* FORMULARIO */
 .form-cadastro {
     height: 100vh;
-    width: 60vw;
+    width: 100vw;
     background-color: #e9eaec;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .box-form {
     width: 350px;
 }
 
-.box-form h5, .box-form p {
+.box-form h5,
+.box-form p {
     font-family: "Raleway", sans-serif;
     font-size: 25px;
     margin-bottom: 10px;
@@ -97,10 +118,12 @@
     margin-bottom: 20px;
 }
 
-.input, .inputP1, .inputP2{
+.input,
+.inputP1,
+.inputP2 {
     height: 40px;
     width: 100%;
-    background: #F5F5F5;
+    background: #f5f5f5;
     border-radius: 3px;
     border: none;
     font-family: "rubik", sans-serif;
@@ -112,11 +135,13 @@
     display: block;
 }
 
-.box-input1, .box-input2 {
+.box-input1,
+.box-input2 {
     display: flex;
 }
 
-.inputP1, .inputP2 {
+.inputP1,
+.inputP2 {
     width: 170px;
     margin-left: 10px;
 }
@@ -128,7 +153,7 @@
 .box-password h6 {
     font-family: "Raleway", sans-serif;
     font-size: 15px;
-    margin: 10px 0 10px ;
+    margin: 10px 0 10px;
 }
 
 /* BTN */
@@ -174,20 +199,22 @@ button:active {
 }
 
 /* SOCIAL */
-.socialConect, .socialConect div {
+.socialConect,
+.socialConect div {
     display: flex;
     align-items: center;
 }
 
-#facebook{
+#facebook {
     margin: 0 10px;
 }
 
-#facebook img:active, #google img:active {
+#facebook img:active,
+#google img:active {
     transform: (scale(0.95));
 }
 
-.socialConect p{
+.socialConect p {
     font-family: "Raleway", sans-serif;
     font-size: 14px;
     color: #9b0000;
@@ -195,12 +222,24 @@ button:active {
     margin: 0;
 }
 
-
-
 /* SVG */
 .svg-cadastro {
     width: 40%;
     position: absolute;
     left: 100px;
     bottom: -0;
+}
+
+@media screen and (min-width: 992px) {
+    .bg-cadastro {
+        display: block;
+    }
+
+    .form-cadastro {
+        width: 60vw;
+    }
+
+    .btn-voltar-mob {
+        display: none;
+    }
 }
