--- a/src/assets/css/schedulingStyle.css
+++ b/src/assets/css/schedulingStyle.css
@@ -2,6 +2,56 @@ ul {
     list-style-type: none;
 }
 
+/* PERFIL */
+.perfil-container {
+    cursor: pointer;
+}
+
+.perfil-container-mob {
+    position: relative;
+    top: -320px;
+    display: block;
+    cursor: pointer;
+}
+
+.perfil-container-mob button{
+    color: #f5f5f5;
+}
+
+.dropdown-item{
+    color: black;
+}
+
+.perfil-container button, .perfil-container-mob button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: transparent;
+    border-color: transparent;
+    max-width: 250px;
+}
+
+.perfil-container button span, .perfil-container-mob button span{
+   color: #f5f5f5;
+   text-overflow: ellipsis;
+   overflow: hidden;
+   font-family: 'Rubik',sans-serif;
+}
+
+.perfil-container button:hover, .perfil-container-mob button:hover {
+    background-color: #af281c;
+    border-color: rgba(250, 250, 250, 0.2);
+}
+
+.perfil-container button:focus, .perfil-container-mob button:focus {
+    background-color: #bb2a1d;
+    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.1);
+}
+
+.perfil-container button img {
+    margin: 0 5px;
+}
+
 #scheduling{
     padding-top: 80px;
     height: 100%;
@@ -217,7 +267,6 @@ ul {
     font-weight: bold;
     font-size: 26px;
     font-family: "Raleway", sans-serif;
-
 }
 
 @media screen and (max-width: 768px) {
@@ -233,6 +282,16 @@ ul {
         width: 90%;
     }
 
+}
+
+@media screen and (min-width: 992px) {
+    .perfil-container {
+        display: block;
+    }
+
+    .perfil-container-mob {
+        display: none;
+    }
 }
 
 /* Calendario */
@@ -335,4 +394,63 @@ ul {
     font-weight: bold;
     font-family: 'Rubik',sans-serif;
     color: #9B0000;
+}
+
+/* navMob*/
+.navBar-mob {
+    width: 220px;
+    height: 100vh;
+    display: block;
+    position: fixed;
+    top: 0;
+    background-color: #9b0000;
+    z-index: 1100;
+    padding: 100px 30px 30px;
+    transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.navBar-mob a {
+    width: 100%;
+    height: 60px;
+    display: block;
+    line-height: 60px;
+    color: #f5f5f5;
+    font-family: "Raleway", sans-serif;
+    text-decoration: none;
+}
+
+.btn-menu-mob {
+    background: transparent;
+    display: block;
+    color: #fff;
+    border: none;
+    position: fixed;
+    right: 50px;
+    top: 25px;
+    z-index: 1200;
+    cursor: pointer;
+}
+
+.btn-menu-mob:focus {
+    outline: none;
+}
+
+ion-icon {
+    height: 30px;
+    width: 30px;
+    color: #f5f5f5;
+    vertical-align: middle;
+}
+
+
+.menu-is-open {
+    right: 0;
+}
+
+.menu-is-close {
+    right: -240px;
+}
+
+.open {
+    display: block;
 }
