--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -91,10 +91,10 @@ body {
         cursor: pointer;
     }
 
-    .perfil-container-mob button{
+    .perfil-container-mob button, .perfil-container button{
         color: #f5f5f5;
     }
-    
+
     .dropdown-item{
         color: #f5f5f5;
     }
@@ -137,6 +137,7 @@ body {
     .perfil-container button img {
         margin: 0 5px;
     }
+
 
     /* HEADER */
     header > .container-fluid {
@@ -1077,9 +1078,6 @@ body {
     }
 
     /* PERFIL */
-    .perfil-container {
-        display: block;
-    }
 
     .perfil-container-mob {
         display: none;
@@ -1150,6 +1148,7 @@ body {
 }
 
 /* SCROLLBAR */
+
 ::-webkit-scrollbar {
     background-color: #f5f5f5;
     width: 12px;
