--- a/src/assets/css/schedulingStyle.css
+++ b/src/assets/css/schedulingStyle.css
@@ -2,66 +2,6 @@ ul {
     list-style-type: none;
 }
 
-/* PERFIL */
-.perfil-container {
-    display: none;
-}
-
-.perfil-container {
-    cursor: pointer;
-}
-
-.perfil-container:active{
-    transform: scale(0.95);
-}
-
-/* PERFIL  */
-
-.perfil-container-mob {
-    position: relative;
-    top: -320px;
-
-    cursor: pointer;
-}
-
-.perfil-container-mob button{
-    color: #f5f5f5;
-}
-
-.dropdown-item{
-    color: black;
-}
-
-.perfil-container button, .perfil-container-mob button {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: transparent;
-    border-color: transparent;
-    max-width: 250px;
-}
-
-.perfil-container button span, .perfil-container-mob button span{
-   color: #f5f5f5;
-   text-overflow: ellipsis;
-   overflow: hidden;
-   font-family: 'Rubik',sans-serif;
-}
-
-.perfil-container button:hover, .perfil-container-mob button:hover {
-    background-color: #af281c;
-    border-color: rgba(250, 250, 250, 0.2);
-}
-
-.perfil-container button:focus, .perfil-container-mob button:focus {
-    background-color: #bb2a1d;
-    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.1);
-}
-
-.perfil-container button img {
-    margin: 0 5px;
-}
-
 
 #scheduling{
     padding-top: 80px;
@@ -93,7 +33,7 @@ ul {
 }
 
 
-.adviceList{    
+.adviceList{
     list-style-type: none;
 
 }
@@ -317,7 +257,7 @@ ul {
     border-style: solid;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.15);
 }
-.btn, .btn-selected {
+.btn-calendar, .btn-selected {
     border-radius: 50%;
     width: 30px;
     height: 30px;
@@ -327,13 +267,13 @@ ul {
     background-color: transparent;
 }
 
-.btn:hover{
+.btn-calendar:hover{
     transform: scale(1.1);
     background-color: rgba(0, 0, 0,0.1);
     transition-duration: 100ms;
 }
 
-.btn:active {
+.btn-calendar:active {
     transform: scale(1.2);
     background-color: rgba(255, 0, 0, 0.1);
     transition-duration: 100ms;
